--- a/package.json
+++ b/package.json
@@ -12,19 +12,26 @@
     "angular-route": "^1.7.5",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.8.0",
-    "jquery": "^3.3.1"
+    "express": "^4.17.1",
+    "jquery": "^3.3.1",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.0",
     "@babel/core": "^7.6.0",
+    "@babel/plugin-transform-runtime": "^7.6.0",
+    "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-typescript": "^7.3.3",
     "babel-loader": "^8.0.6",
     "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.8"
+    "webpack-cli": "^3.3.8",
+    "webpack-dev-middleware": "^3.7.1",
+    "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
-    "test": "webpack --mode=development"
+    "test": "webpack --mode=development",
+    "build": "webpack --mode=production"
   },
   "repository": {
     "type": "git",
